# trackers-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NEXT_TASK.md  PLAN.md  README.md  annotate_video.py  main.py  pyproject.toml  run_bytetrack_on_detections.py  run_rfdetr_video.py  test_hungarian.py
scripts/: annotate_video.py  run_bytetrack.py  run_rfdetr.py
src/: detection.rs  iou.rs  kalman.rs  main.rs  tracker.rs  utils.rs
