[project]
name = "trackers-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.4.2",
  "opencv-python>=4.13.0.92",
  "rfdetr>=1.4.3",
  "scipy>=1.17.0",
  "supervision>=0.27.0.post1",
  "torch>=2.6.0",
  "trackers>=2.2.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
